# Wedding-Face-Forward

./: .gitignore  LICENSE  PHOTO_ROUTING_FIX.md  PROJECT_DEV_LOG.md  README.md  REALTIME_CLOUD_SYNC.md  SYNC_SUMMARY.md  WeddingFFapp.py  aura.iss  aura.spec  checking_all_code_code_exporter.py  cleanup_ports.bat  clear_photos.py  design_guide.md  dist_utils.py  erase_all_data.py  git_automator.py  newfile.txt  overall pathway guidline.md  prompt.txt  pyreflycrash.txt  run_pyside.py  setup.iss  wedding_ff.spec
To_Do/: features_to_be_added.md  idea.txt
WeddingFFapp_pyside/: __init__.py  app_window.py  main.py  process_manager.py  splash_screen.py  theme.py  worker_bridge.py
WeddingFFapp_pyside/widgets/: __init__.py  (+17 more)
aura_app/: __init__.py  main.py  process_manager.py  splash_screen.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt  setup_auth.py
backend/app/: __init__.py  cloud.py  cluster.py  config.py  db.py  enroll_cli.py  enrollment.py  gpu_manager.py  phase.py  processor.py  router.py  upload_queue.py  watcher.py  worker.py
backend/tests/: test_cluster.py  test_db.py
checker_scripts/: check_counts_discrepancy.py  check_recent_photos.py  deduplicate_faces.py
frontend/: README.md  index.html  package.json  requirements.txt  server.py
infos/: PROJECT_DEV_LOG.md  WINDOWS_DISTRIBUTION_PLAN.md  adding gpu support automatically.md  all_things_written_down.txt  current plan to convert py script to an w11 app.md  plan1 lets start with this.md  project_structure.md  system_architecture.md
whatsapp_tool/: README.md  db_whatsapp_sender.py
(+11 files in other folders)
