[project]
name = "wedding-face-forward"
version = "0.1.0"
description = "Phase 2 Backend: Photo processing pipeline with face detection, embeddings, and clustering"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.8.0",
    "rawpy>=0.19.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
wedding-worker = "app.worker:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
